add update emote endpoint
