# backend/src/main/java/de/jonas/emote/tracker/backend/user/UserController.java
@@ -3,20 +3,22 @@ package de.jonas.emote.tracker.backend.user;
 import de.jonas.emote.tracker.backend.api.controller.UserApi;
 import de.jonas.emote.tracker.backend.api.model.Emote;
 import java.util.List;
-import org.jetbrains.annotations.NotNull;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
 @RestController
 public class UserController implements UserApi {
     private final RegistrationService registrationService;
     private final UserService userService;
+    private final EmoteUpdateService updateService;
 
-    public UserController(RegistrationService registrationService, UserService userService) {
+    public UserController(RegistrationService registrationService,
+                          UserService userService,
+                          EmoteUpdateService updateService) {
         this.registrationService = registrationService;
         this.userService = userService;
+        this.updateService = updateService;
     }
 
     @Override
@@ -39,17 +41,22 @@ public class UserController implements UserApi {
     }
 
     @Override
-    public ResponseEntity<String> registerNewUser(
-        @RequestParam(value = "user") @NotNull String user) {
+    public ResponseEntity<String> registerNewUser(String user) {
         return registrationService.register(user)
             ? ResponseEntity.ok().build()
             : ResponseEntity.status(HttpStatus.NOT_MODIFIED).build();
     }
 
     @Override
-    public ResponseEntity<String> unregisterUser(@RequestParam(value = "user") @NotNull String user) {
+    public ResponseEntity<String> unregisterUser(String user) {
         return registrationService.unregister(user)
             ? ResponseEntity.ok().build()
             : ResponseEntity.status(HttpStatus.NOT_MODIFIED).build();
+    }
+
+    @Override
+    public ResponseEntity<Void> updateEmotesForUser(String userId) {
+        updateService.updateUserEmotes(userId);
+        return ResponseEntity.ok().build();
     }
 }
